# neurust

./: Cargo.toml  README.md  flake.nix
.github/workflows/: minimal-versions.yml  rust.yml
src/: backend.rs  lib.rs  tensor.rs
src/backend/: ndarray.rs
src/backends/: ndarray.rs
